tests/ui/asm/naked-asm-outside-naked-fn.stderr
error: the `naked_asm!` macro can only be used in functions marked with `#[unsafe(naked)]`
  --> $DIR/naked-asm-outside-naked-fn.rs:22:5
   |
LL |     naked_asm!("")
   |     ^^^^^^^^^^^^^^

error: the `naked_asm!` macro can only be used in functions marked with `#[unsafe(naked)]`
  --> $DIR/naked-asm-outside-naked-fn.rs:27:9
   |
LL |     (|| naked_asm!(""))()
   |         ^^^^^^^^^^^^^^

error: the `naked_asm!` macro can only be used in functions marked with `#[unsafe(naked)]`
  --> $DIR/naked-asm-outside-naked-fn.rs:33:9
   |
LL |         naked_asm!("");
   |         ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

